modules/aws-client-utility/data/ec2_DescribeSecurityGroups_us-east-1_None.json
{"service": "ec2", "region": "us-east-1", "profile": null, "operation": "DescribeSecurityGroups", "response": {"SecurityGroups": [{"Description": "default VPC security group", "GroupName": "default", "IpPermissions": [{"IpProtocol": "-1", "IpRanges": [], "Ipv6Ranges": [], "PrefixListIds": [], "UserIdGroupPairs": [{"GroupId": "sg-002a96d5ecc2f979c", "UserId": "660456532861"}]}], "OwnerId": "660456532861", "GroupId": "sg-002a96d5ecc2f979c", "IpPermissionsEgress": [{"IpProtocol": "-1", "IpRanges":  [...]
